<resources>
    <string name="app_name">MaxWayClone</string>
    <string name="burgers">Бургеры</string>
    <string name="sandwich">Сендвич</string>
    <string name="lavash">Лаваш</string>
    <string name="french_fries">Картошка фри</string>
    <string name="recommended">Рекомендуем</string>
    <string name="place_order">Оформить заказ</string>
    <string name="attention">Внимание!</string>
    <string name="clear_cart_confirmation">Вы уверены, что хотите очистить корзину?</string>
    <string name="cart">Корзина</string>
    <string name="phone_number">Номер телефона</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="continyu">Продолжить</string>
    <string name="verification_code">Код подтверждения</string>
    <string name="full_name">Имя фамилия</string>
    <string name="arrival_time">Время прибытия:</string>
    <string name="order_total">Сумма заказа</string>
    <string name="orders">Заказы</string>
    <string name="order_history">История заказов</string>
    <string name="current_orders">Текущие заказы</string>
    <string name="order_status">Статус заказа</string>
    <string name="order_created">Заказ оформлен</string>
    <string name="branch_accepted">Филиал принял</string>
    <string name="branch_prepared">Филиал приготовил</string>
    <string name="courier_picked_up">Курьер забрал</string>
    <string name="delivered">Доставлен</string>
    <string name="branches">Филиалы</string>
    <string name="settings">Настройки</string>
    <string name="about_service">О сервисе</string>
    <string name="home">Главное</string>
    <string name="profile">Личное</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="phone">Номер телефона</string>
    <string name="birth_date">Дата рождения</string>
    <string name="confirm">Подтвердить</string>
    <string name="you_don_t_have_any_active_order_yet">У вас пока нет активных заказов</string>
    <string name="save">Сохранить</string>
    <string name="delete_account">Удалить учетную запись</string>
    <string name="profile_edit">Изменения данных</string>
    <string name="what_is_your_name">Как вас зовут</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="login_to_max_way">Вход в Max Way</string>
    <string name="press_continue">Нажимая \'Продолжить\', вы соглашаетесь с</string>
    <string name="politics_privacy">Политикой конфиденциальности.</string>
    <string name="public_offers">Публичной оферты</string>
    <string name="and"> и </string>
    <string name="enter_your_name">Введите ваше имя</string>
    <string name="incorrect_pin">Введен неверный код</string>
    <string name="send_other_code">Отправить другой код</string>
    <string name="enter_code_from_sms">Введите код из смс</string>
    <string name="send_to_code_this_number">Код отправили на номер</string>
    <string name="profile_text_in_profile_screen">Профиль</string>
    <string name="enter">Войти</string>
    <string name="balance">Баланс</string>
    <string name="my_address">Мои адреса</string>
    <string name="discount">Акции</string>
    <string name="vacancy">Вакансии</string>
    <string name="news">Новости</string>
    <string name="gallery">Галерея</string>
    <string name="recipe">Рецепты</string>
    <string name="language">Язык</string>
    <string name="delever">Работает на Delever</string>
    <string name="repeat">Повторить попытку</string>
    <string name="check_internet">Проверьте соединение и попробуйте снова.</string>
    <string name="no_internet">Нет подключения к \nинтернету</string>
    <string name="pay">К оплате</string>
    <string name="addBasket">Добавить</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="search">Поиск...</string>
    <string name="cancel">Отменить</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="notification">Уведомление</string>
    <string name="_00_000_00_00">00 000 00 00</string>
    <string name="server_exception">Ошибка сервера 404</string>
    <string name="server_insight">Извините за ошибки, пожалуйста, попробуйте еще раз.</string>
</resources>