<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?selectableItemBackground"
        android:padding="7dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/register_max_way_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/image_logo"
        app:layout_constraintBottom_toTopOf="@+id/register_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBack"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login_to_max_way"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_max_way_logo" />

    <TextView
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/phone_number"
        android:textColor="@color/black_gray"
        app:layout_constraintBottom_toTopOf="@+id/panelEditText"
        app:layout_constraintStart_toStartOf="@+id/panelEditText"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <LinearLayout
        android:id="@+id/panelEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/background_edit_text_register"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="12dp"
            android:text="+998"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/editTextRegisterPhone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center|start"
            android:hint="@string/_00_000_00_00"
            android:inputType="phone"
            android:maxLength="15"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_oferta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/press_continue"
        android:textColor="@color/black_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/panelEditText"
        app:layout_constraintEnd_toEndOf="@id/panelEditText"
        app:layout_constraintTop_toBottomOf="@id/panelEditText" />

    <LinearLayout
        android:id="@+id/layoutPrivacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="@id/text_oferta"
        app:layout_constraintTop_toBottomOf="@id/text_oferta">

        <TextView
            android:id="@+id/buttonTextPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politics_privacy"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/and"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/buttonTextOferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_offers"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonContinue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_button_register"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/continyu"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/buttonContinue"
        app:layout_constraintEnd_toEndOf="@id/buttonContinue"
        app:layout_constraintStart_toStartOf="@id/buttonContinue"
        app:layout_constraintTop_toTopOf="@id/buttonContinue" />

</androidx.constraintlayout.widget.ConstraintLayout>