<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.13"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_back_button"
            android:scaleType="centerCrop"
            android:background="?selectableItemBackground"
            android:padding="7dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/register_max_way_logo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
            app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal"
            android:src="@drawable/image_logo"
            />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_max_way_logo"
            android:text="@string/welcome"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/panelEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:paddingStart="16dp"
            android:maxLines="1"
            android:maxLength="15"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/enter_your_name"
            android:background="@drawable/background_edit_text_register"
            app:layout_constraintTop_toBottomOf="@id/register_title"
            tools:layout_editor_absoluteX="30dp">

        </EditText>

        <TextView
            android:id="@+id/editTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_name"
            android:textColor="@color/black_gray"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintBottom_toTopOf="@id/panelEditText"
            app:layout_constraintStart_toStartOf="@id/panelEditText"
            android:layout_marginBottom="5dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/background_button_register"
        android:elevation="0dp"
        android:enabled="true"
        android:text="@string/continyu"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

