<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/otpTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/enter_code_from_sms"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/send_to_code_this_number"
        android:textColor="#5C6B7A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/pinView"
        app:layout_constraintEnd_toStartOf="@id/phoneNumber"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpTitle" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text=" +998 (97) 416 07 56"
        android:textColor="#5C6B7A"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textSubtitle"
        app:layout_constraintStart_toEndOf="@id/textSubtitle"
        app:layout_constraintTop_toTopOf="@id/textSubtitle" />

    <com.chaos.view.PinView
        android:id="@+id/pinView"
        style="@style/PinViewBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:inputType="number"
        app:cursorColor="@color/black"
        app:hideLineWhenFilled="false"
        app:itemCount="4"
        app:itemHeight="60dp"
        android:itemBackground="@drawable/background_otp_error"
        app:layout_constraintDimensionRatio="1"
        app:itemRadius="8dp"
        app:itemSpacing="20dp"
        android:textColor="@color/black"
        app:itemWidth="60dp"
        app:lineColor="@color/gray"
        app:lineWidth="2dp"
        app:viewType="rectangle"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintTop_toBottomOf="@id/textSubtitle"/>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/incorrect_pin"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/pinView"
        app:layout_constraintTop_toBottomOf="@id/pinView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_button_register"
        android:enabled="false"
        android:text="@string/continyu"
        android:textAllCaps="false"
        android:textStyle="bold"
        style="@style/button"
        app:layout_constraintBottom_toTopOf="@id/panelTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnContinue"
        app:layout_constraintEnd_toEndOf="@id/btnContinue"
        app:layout_constraintStart_toStartOf="@id/btnContinue"
        app:layout_constraintTop_toTopOf="@id/btnContinue" />

    <LinearLayout
        android:id="@+id/panelTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send_other_code"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=" 00:52"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>